working debian support

--- a/debian/control
+++ b/debian/control
@@ -8,5 +8,5 @@ Standards-Version: 3.8.3
 Package: juniper
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: <insert up to 60 chars description>
- <insert long description, indented with spaces>
+Description: Startup scripts for Juniper VPN
+ These scripts are simple wrappers around the Juniper VPN binary 'ncsvc'.
